# dsf

./: .buildinfo  CITATION.cff  LICENSE  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  installation.doctree
.doctrees/api/: dsf.covariance.cov_builder.doctree  dsf.covariance.doctree  dsf.covariance.ingredients.cov_blocks.doctree  dsf.covariance.ingredients.doctree  dsf.covariance.ingredients.galaxy_bias.doctree  dsf.covariance.ingredients.geometry.doctree  dsf.covariance.ingredients.noise.doctree  dsf.covariance.ingredients.power_spectrum.doctree  dsf.covariance.ingredients.sigma_crit.doctree  dsf.covariance.projection.doctree  dsf.covariance.projection.hankel_transform.doctree  dsf.covariance.projection.hankel_utils.doctree  dsf.data_vector.ccl_integration.doctree  dsf.data_vector.delta_sigma_builder.doctree  dsf.data_vector.doctree  dsf.data_vector.mag_bias.doctree  dsf.data_vector.profiles.doctree  dsf.delta_sigma_forecast_builder.doctree  dsf.doctree  dsf.modelling.doctree  dsf.tomography.doctree  dsf.tomography.tomo_builder.doctree  dsf.utils.converters.doctree  dsf.utils.doctree  dsf.utils.integrators.doctree  dsf.utils.thread_limits.doctree  dsf.utils.types.doctree  dsf.utils.validators.doctree  index.doctree
.doctrees/examples/: builder_example.doctree  covariance.doctree  data_vector.doctree  index.doctree  tomography.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/dsf/: delta_sigma_forecast_builder.html  modelling.html
_modules/dsf/covariance/: cov_builder.html
_modules/dsf/data_vector/: ccl_integration.html  delta_sigma_builder.html  mag_bias.html  profiles.html
_modules/dsf/tomography/: tomo_builder.html
_modules/dsf/utils/: converters.html  integrators.html  thread_limits.html  validators.html
_sources/: index.rst.txt  installation.rst.txt
_sources/api/: dsf.covariance.cov_builder.rst.txt  dsf.covariance.ingredients.cov_blocks.rst.txt  dsf.data_vector.mag_bias.rst.txt  dsf.data_vector.profiles.rst.txt  dsf.delta_sigma_forecast_builder.rst.txt  dsf.rst.txt  dsf.tomography.tomo_builder.rst.txt  dsf.utils.integrators.rst.txt  dsf.utils.validators.rst.txt
_sources/examples/: covariance.rst.txt
analysis/: redo_forecast_contours_from_arrays.py  redo_tomography_snr_plots.py  run_forecast.py  run_forecast_health_check.py  run_scale_snr_sweep.py  run_snr_check.py  run_tomography_fisher_from_saved_covariances.py  run_tomography_inspection.py  run_tomography_snr_sweep.py  summarize_tomo_snr.py
analysis/configs/: dsf_desi_lrg_lsst_y1_hod.yaml  dsf_desi_lrg_lsst_y1_hod_baryons.yaml  dsf_desi_lrg_lsst_y1_hod_baryons_nla.yaml  dsf_desi_lrg_lsst_y1_hod_evolution.yaml  dsf_desi_lrg_lsst_y1_hod_nla.yaml  scale_scenarios.py  tomography_best_scenarios_config.py  tomography_sweep_config.py
analysis/plot_scripts/: plot_contours.py  plot_covariance.py  plot_datavector.py  plot_snr.py  plot_style.py  plot_tomobins.py  plot_tomography_summaries.py
analysis/runs_output/: forecast_health_summary.csv
analysis/scripts/: config.py  diagnostic_metrics.py  fisher_metrics.py  forecast.py  forecast_health.py  io.py  model_setup.py  plot_run_outputs.py  tomography_metrics.py
api/: dsf.covariance.cov_builder.html  dsf.covariance.html  dsf.covariance.ingredients.cov_blocks.html  dsf.covariance.ingredients.galaxy_bias.html  dsf.covariance.ingredients.geometry.html  dsf.covariance.ingredients.html  dsf.covariance.ingredients.noise.html  dsf.covariance.ingredients.power_spectrum.html  dsf.covariance.ingredients.sigma_crit.html  dsf.covariance.projection.hankel_transform.html  dsf.covariance.projection.hankel_utils.html  dsf.covariance.projection.html  dsf.data_vector.ccl_integration.html  dsf.data_vector.delta_sigma_builder.html  dsf.data_vector.html  dsf.data_vector.mag_bias.html  dsf.data_vector.profiles.html  dsf.delta_sigma_forecast_builder.html  dsf.html  dsf.modelling.html  dsf.tomography.html  dsf.tomography.tomo_builder.html  dsf.utils.converters.html  dsf.utils.html  dsf.utils.integrators.html  dsf.utils.thread_limits.html  dsf.utils.types.html  dsf.utils.validators.html  index.html
benchmarks/: README.md
benchmarks/covariance/: README.md
benchmarks/data_vector/: README.md
docs/: conf.py  index.rst  installation.rst
docs/api/: dsf.covariance.ingredients.galaxy_bias.rst  dsf.covariance.ingredients.geometry.rst  dsf.covariance.ingredients.noise.rst  dsf.covariance.ingredients.power_spectrum.rst  dsf.covariance.ingredients.rst  dsf.covariance.ingredients.sigma_crit.rst  dsf.covariance.projection.hankel_transform.rst  dsf.covariance.projection.hankel_utils.rst  dsf.covariance.projection.rst  dsf.covariance.rst  dsf.data_vector.ccl_integration.rst  dsf.data_vector.delta_sigma_builder.rst  dsf.data_vector.rst  dsf.modelling.rst  dsf.tomography.rst  dsf.utils.converters.rst  dsf.utils.rst  dsf.utils.thread_limits.rst  dsf.utils.types.rst  index.rst
docs/examples/: builder_example.rst  data_vector.rst  index.rst  tomography.rst
docs/examples/cached_files/: builder_example_forecast_cache.npz
examples/: builder_example.html  covariance.html  data_vector.html  index.html  tomography.html
src/: sitecustomize.py
src/dsf/: delta_sigma_forecast_builder.py  modelling.py
src/dsf/covariance/: cov_builder.py
src/dsf/data_vector/: ccl_integration.py  (+3 more)
tests/: test_cov_cov_builder.py  test_cov_ingr_cov_blocks.py  test_cov_ingr_galaxy_bias.py  test_cov_ingr_geometry.py  test_cov_ingr_noise.py  test_cov_ingr_power_spectrum.py  test_cov_ingr_sigma_crit.py  test_cov_proj_hankel_transform.py  test_cov_proj_hankel_utils.py  test_datavec_ccl_integration.py  test_datavec_delta_sigma_builder.py  test_datavec_mag_bias.py  test_datavec_profiles.py  test_dsf_dsf_builder.py  test_dsf_modelling.py  test_src_sitecustomize.py  test_tomography_tomo_builder.py  test_utils_converters.py  test_utils_hankel_transform_1d.py  test_utils_integrators.py  test_utils_thread_limits.py  test_utils_types.py  test_utils_validators.py
(+224 files in other folders)
