[project]
name = "dsf"
version = "0.1.0"
description = "Delta Sigma forecasting tools for LSST DESC galaxy-galaxy lensing analyses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Nikolina Sarcevic", email = "nikolina.sarcevic@gmail.com" },
  { name = "Ben Levine", email = "benjamin.c.levine@stonybrook.edu" },
]

maintainers = [
  { name = "Nikolina Sarcevic", email = "nikolina.sarcevic@gmail.com" },
  { name = "Ben Levine", email = "benjamin.c.levine@stonybrook.edu" },
]

keywords = [
  "cosmology",
  "weak lensing",
  "galaxy-galaxy lensing",
  "delta sigma",
  "forecasting",
  "LSST DESC",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pyyaml",
  "pyccl",
  "astropy",
  "pybinny>=0.3.2",
  "derivkit",
  "cmasher",
  "getdist",
]

[dependency-groups]
dev = [
  "tox>=4.22",
  "bump-my-version>=0.26",
]

test = [
  "pytest>=8",
  "pytest-cov>=5",
  { include-group = "dev" },
]

docs = [
  "sphinx[doctest]<9",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-multiversion",
  "furo",
  { include-group = "dev" },
]

lint = [
  "ruff>=0.6",
  { include-group = "dev" },
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = [
  "src*",
  "analysis*",
]
exclude = [
  "runs*",
  "notebooks*",
  "docs*",
  "tests*",
  "benchmarks*",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
  "slow: long-running tests (opt-in)",
  "regression: heavier regression / sweep tests (opt-in)",
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  "benchmarks",
  "docs",
  "runs",
  "notebooks",
]
line-length = 100
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.tox]
requires = ["tox>=4.22"]
labels = { test = ["py310", "py311", "py312"] }
envlist = [
  "do",
  "docs",
  "docs-releases",
  "lint",
  "py310",
  "py311",
  "py312",
  "cov",
]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
change_dir = "{tox_root}/tests"
dependency_groups = ["test"]
allowlist_externals = ["pytest"]
commands = [
  ["pytest", "-m", "not slow", { replace = "posargs", extend = true }],
]

[tool.tox.env_run_base.setenv]
PIP_CACHE_DIR = "{tox_root}/.cache/pip"

[tool.tox.env.cov]
description = "Run tests with coverage"
change_dir = "{tox_root}"
dependency_groups = ["test"]
commands = [
  [
    "pytest",
    "-q",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    { replace = "posargs", extend = true },
  ],
]

[tool.tox.env.docs]
description = "Build docs with Sphinx"
change_dir = "{tox_root}"
dependency_groups = ["docs"]
commands = [
  [
    "sphinx-apidoc",
    "-d",
    "2",
    "-o",
    "{tox_root}/docs/api",
    "--tocfile",
    "index",
    "{tox_root}/src/dsf",
    "--separate",
    "-f",
  ],
  [
    "sphinx-build",
    "-c",
    "{tox_root}/docs",
    "-b",
    "{posargs:html}",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/{posargs:html}",
    "--fail-on-warning",
  ],
]

[tool.tox.env.do]
description = "(Mac only) Build and test docs and open docs in browser"
change_dir = "{tox_root}"
dependency_groups = ["docs"]
allowlist_externals = ["open"]
commands = [
  [
    "sphinx-apidoc",
    "-d",
    "2",
    "-o",
    "{tox_root}/docs/api",
    "--tocfile",
    "index",
    "{tox_root}/src/dsf",
    "--separate",
    "-f",
  ],
  [
    "sphinx-build",
    "-c",
    "{tox_root}/docs",
    "-b",
    "doctest",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/doctest",
    "--fail-on-warning",
    { replace = "posargs", extend = true },
  ],
  [
    "sphinx-build",
    "-c",
    "{tox_root}/docs",
    "-b",
    "html",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
    { replace = "posargs", extend = true },
  ],
  [
    "open",
    "{tox_root}/docs/_build/html/index.html",
  ],
]

[tool.tox.env.docs-releases]
description = "Build release documentation for deployment"
change_dir = "{tox_root}"
dependency_groups = ["docs"]
commands = [
  [
    "sphinx-apidoc",
    "-d",
    "2",
    "-o",
    "{tox_root}/docs/api",
    "--tocfile",
    "index",
    "{tox_root}/src/dsf",
    "--separate",
    "-f",
  ],
  [
    "sphinx-build",
    "-c",
    "{tox_root}/docs",
    "-b",
    "html",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
]

[tool.tox.env.lint]
description = "Lint DSF using Ruff"
change_dir = "{tox_root}"
dependency_groups = ["lint"]
commands = [
  [
    "ruff",
    "check",
    "{tox_root}",
    { replace = "posargs", extend = true },
  ],
]
